--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@google/generative-ai": "*",
     "@genkit-ai/googleai": "*",
+    "@google/genai": "^0.8.0",
+    "@google/generative-ai": "*",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
