--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
