--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@google/generative-ai": "*",
+    "@google/genai": "^0.8.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -32,6 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack-query-firebase/react": "^2.0.0",
     "@tanstack/react-query": "^5.72.2",
     "class-variance-authority": "^0.7.1",
@@ -59,7 +60,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
