--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ next-env.d.ts
 .idx*/*
 .env
 package-lock.json
+.env
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
