--- a/package.json
+++ b/package.json
@@ -32,31 +32,28 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.3",
-    "@tanstack-query-firebase/react": "^2.0.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "patch-package": "^8.0.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.6.5",
     "react-dom": "^19.1.0",
-    "react-dropzone": "*",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.55.0",
     "recharts": "^2.15.2",
-    "server-perplexity-ask": "^0.1.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "*",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.3",
+    "@playwright/test": "^1.51.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
