--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.55.0",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
